--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,7 @@
 [build]
   functions = "netlify/functions"
+
+[[redirects]]
+  from = "/devlog-admin/callback"
+  to = "/admin.html"
+  status = 200
