--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "devlog-admin",
   "version": "1.0.0",
   "dependencies": {
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^2.6.9",
+    "missing-package": "version"
   }
 }
